# rag_itmo

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  test.py  utils.py
database/: Dockerfile  main.py  pyproject.toml  utils.py
